Update and rename simple-route.html to element-route.html

--- a/element-route.html
+++ b/element-route.html
@@ -1,9 +1,9 @@
-<dom-module id="simple-route">
+<dom-module id="element-route">
 	<template>
 	</template>
 	<script>
 		Polymer({
-			is: 'simple-route',
+			is: 'element-route',
 
 			properties: {
 				path: {
